<resources>
    <string name="app_name">Note App</string>
    <string name="my_notes">My Notes</string>
    <string name="search_note">Search Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="empty_title_error">Note Title can\'t be empty!</string>
    <string name="note_text_empty_error">Note can\'t be empty!</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_note">Add Note</string>
    <string name="add_image">Add Image</string>
    <string name="permission_error">Permission Denied !</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_url_error">Enter Url</string>
    <string name="enter_valid_url_error">Enter valid URL</string>
</resources>