<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".screen.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textMyNotes"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/my_notes"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="@id/textMyNotes"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/colorSearchBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name"
            android:layout_height="@dimen/_20sdp"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/inputSearch"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/search_note"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/colorWhite"
            android:importantForAutofill="no"
            android:textColorHint="@color/colorTextHint"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_2sdp"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_height="0dp">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorQuicklyActionsBackground"
        android:padding="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_add_outline"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:id="@+id/imageAddNote"
            app:tint="@color/colorIcons" />

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_image"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:id="@+id/imageAddImage"
            app:tint="@color/colorIcons" />

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_language"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:id="@+id/imageAddWebLink"
            app:tint="@color/colorIcons" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>